plang/testing/logs/false-incorrect/199/program199.p.p
eEI (kPF Qs (Vv)) q8 (oKz FAVAK qb) wZaqw :- b0 (S) (RpSa); qqkcU Mn h84nZ U qE, (lVhs A d), (pHL; i lPgcr (HW) (QUw), m Bzd CL; rR j); (zM9Wi NMqvJ (B0) sh gww).
rp (j) (WhjH) (sCmOE (fp) gWP) UG :- (pWgP4 vX XPO QsE).

f8Y jjf :- (uc Ua (qHKU (m (gQT BkJn rdRP) (Zp0uL) SN6) (h zSa (Q)) (EDI1) SID)); (ir; v VS; e9TJ bTd8h (VfnH) L3az, z2J (bFm) (J2) nz), vTteJ (JOu); gGcD (sSBTh) (PIw) vKp (P); p, (cpb4C (Xcqy)); (cu5 NxcA (tWa (Ba) (U)) (Fso) W).
oM Kib wGUz (DBOiK).


tLcMB (Pk) (mv (cyN) u1Ms) Curu c :- ((nHv, b D3rq bWz RIP, b0D (H) (Cq) ArIqm; aNA s9L1 U8 (Z), t u4oDG Iv nxY Va9a, qm, gLYzZ Q (PiJL) i6OFo lvK)).
? ((j (Yx) (kX LJA) (ZS) (fYuP (XM) (c8x7 (DAPr) pNU oX)); oED1n Jp wtOdo (hzYW fticH (xd) vlM AYZ) s; aXrt); a1E (Gvg1S); d (VOOpV) (pJFqQ (q9) (d O6DW) (wO A5z4 tA83 J5WNy TzGs9)); l u a4pTs Ot, k (jM (QL6) (en)) (He) Rh (C), aqNOe (RH) R (s (fH) QP2 b0 (BE50)); uV0; j (sYg (Pq) (OerE)) (B) (p hOQy C8I) (UFohq); q e5Am u4jiU (QbLe)).